# cpp-geometry-utils

./: .gitignore  CMakeLists.txt  README.md
include/geometry/: Line.h  Plane.h  Point.h  Polygon.h
include/utils/: utils.h
src/: Line.cpp  Plane.cpp  Point.cpp  Polygon.cpp  main.cpp
src/utils/: utils.cpp
